; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_local_executor.c_ErrorIfLocalExecutionHappened.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_local_executor.c_ErrorIfLocalExecutionHappened.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LocalExecutionHappened = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [90 x i8] c"cannot execute command because a local execution has already been done in the transaction\00", align 1
@.str.1 = private unnamed_addr constant [85 x i8] c"Try re-running the transaction with \22SET LOCAL citus.enable_local_execution TO OFF;\22\00", align 1
@.str.2 = private unnamed_addr constant [98 x i8] c"Some parallel commands cannot be executed if a previous command has already been executed locally\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ErrorIfLocalExecutionHappened() #0 {
  %1 = load i64, i64* @LocalExecutionHappened, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i32, i32* @ERROR, align 4
  %5 = call i32 @errmsg(i8* getelementptr inbounds ([90 x i8], [90 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @errhint(i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @errdetail(i8* getelementptr inbounds ([98 x i8], [98 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @ereport(i32 %4, i32 %7)
  br label %9

9:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errhint(i8*) #1

declare dso_local i32 @errdetail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
